--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,11 @@ name = "sysculptors"
 version = "0.1.0"
 edition = "2021"
 
+[profile.dev]
+panic = "abort"
+
+[profile.release]
+panic = "abort"
+
 
 [dependencies]
