--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,16 @@ edition = "2021"
 bootloader = "0.9.23"
 lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
 spin = "0.9.8"
+uart_16550 = "0.2.19"
 volatile = "0.2.6"
 x86_64 = "0.14.10"
 
 [package.metadata.bootimage]
-test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
+test-args = [
+    "-device",
+    "isa-debug-exit,iobase=0xf4,iosize=0x04",
+    "-serial",
+    "stdio",
+]
 
-test-success-exit-code = 33         # (0x10 << 1) | 1
+test-success-exit-code = 33 # (0x10 << 1) | 1
