--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ test-args = [
     "isa-debug-exit,iobase=0xf4,iosize=0x04",
     "-serial",
     "stdio",
+    "-display",
+    "none",
 ]
 
 test-success-exit-code = 33 # (0x10 << 1) | 1
